k8s/arr/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: arr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: audiobooks
          mountPath: /audiobooks
        - name: config
          mountPath: /config
        - name: metadata
          mountPath: /metadata
      volumes:
      - name: audiobooks
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/media/Books
      - name: config
        persistentVolumeClaim:
          claimName: audiobookshelf-config-pvc
      - name: metadata
        persistentVolumeClaim:
          claimName: audiobookshelf-metadata-pvc
