k8s/arr/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: arr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: audiobookshelf
